frontend/src/components/PostComponent/PostContent/PostContent.module.scss
.post-text {
	white-space: pre-wrap;
	font-family: inherit;
	font-size: inherit;
	margin: 0px;
	word-break: break-all;
}

.post-images {
	position: relative;
	display: grid;
	gap: 5px;
	place-items: center;
	width: 100%;
	margin-inline: auto;

	&[custom-image-count="2"] {
		grid-template-columns: 1fr 1fr;
		.post-image {
			aspect-ratio: 1/1;
		}
	}
	&[custom-image-count="3"] {
		grid-template-columns: 1fr 1fr;
		.post-image {
			aspect-ratio: 1/1;
		}
		.post-image:nth-child(3) {
			grid-column: 1 / span 2;
			aspect-ratio: 16/9;
		}
	}

	&[custom-image-count="4"] {
		grid-template-columns: 1fr 1fr;

		.post-image {
			aspect-ratio: 16/9;
		}
	}

	.post-image {
		width: 100%;
		height: auto;
		object-fit: cover;
		border-radius: 10px;
		max-height: 700px;
	}
}

.post-tags {
	display: flex;
	flex-wrap: wrap;
	gap: 5px;

	.post-tag {
		border-radius: 50px;
		padding: 2px 10px;
		background-color: var(--clr-accent-500);
		font-size: var(--fs-300);
		font-weight: var(--fw-600);
		color: var(--clr-text-500);
		cursor: pointer;
		text-decoration: none;
		transition: 0.1s background-color;

		&:hover {
			background-color: var(--clr-accent-450);
		}

		&::before {
			content: "#";
		}
	}
}

.edited {
	font-size: var(--fs-300);
	color: var(--clr-accent-400);
	font-weight: var(--fw-500);
	font-style: italic;
}

